--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,13 +52,16 @@
             app:layout_constraintRight_toRightOf="parent"
             app:navGraph="@navigation/mobile_navigation" />
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="50dp"
-            android:id="@+id/lottie_layer_name"
-            android:layout_height="50dp"
-            app:lottie_autoPlay="false"
-            app:lottie_loop="false"
-            app:lottie_rawRes="@raw/love" />
+
+        <com.head.view.HeadBottomLottieNavigation
+            android:id="@+id/headBottomLottieNavigation"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
+            android:elevation="14dp"
+            app:headBottomNavigationClickRipples = "false"
+            android:background="@color/white" />
 
         <com.head.view.HeadBottomNavigation
             android:id="@+id/headBottom"
